update gradle.build